# balancer-v1-amm

./: .gitignore  .solhint.json  .solhintignore  README.md  foundry.toml  natspec-smells.config.js  package.json  pyproject.toml  remappings.txt
.forge-snapshots/: deployPool.snap  newBCoWFactory.snap  newBCoWPool.snap  newBFactory.snap  newBPool.snap
.github/workflows/: ci.yml
.husky/: pre-commit
crytic-export/: combined_solc.json
echidna/: BMathInternal.sol
script/: .solhint.json  Deploy.s.sol  DeployBCoWFactory.s.sol  DeployBFactory.s.sol  Params.s.sol  Registry.s.sol  Script.s.sol  TestnetDeployment.s.sol  TestnetScript.s.sol
src/contracts/: BCoWConst.sol  BCoWFactory.sol  BCoWHelper.sol  BCoWPool.sol  BColor.sol  BConst.sol  BFactory.sol  BMath.sol  BNum.sol  BPool.sol  BToken.sol  BaseBCoWPool.sol  GetTradeableOrder.sol  Migrations.sol  ReentrancyGuardTransient.sol  StorageSlot.sol
src/cow-swap/: .TODO  ConditionalOrdersUtilsLib.sol  GPv2Interaction.sol  GPv2Order.sol  IConditionalOrder.sol
src/interfaces/: IBCoWFactory.sol  IBCoWPool.sol  IBFactory.sol  IBPool.sol  ICOWAMMPoolHelper.sol  IFaucet.sol  ISettlement.sol
src/libraries/: GetTradeableOrder.sol
test/: .solhint.json  STRATEGY.md  SUMMARY.md
test/for-test/: ERC20ForTest.sol
test/integration/: BCoWHelper.t.sol  BCowPool.t.sol  BPool.t.sol  Base.sol  Deployment.sol  DeploymentGas.t.sol  Pool.t.sol  PoolSwap.t.sol
test/invariant/: AdvancedTestsUtils.sol  PROPERTIES.md
test/invariants/: AdvancedTestsUtils.sol  PROPERTIES.md
test/manual-smock/: MockBCoWFactory.sol  MockBCoWHelper.sol  (+2 more)
(+99 files in other folders)
